--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "react-router-dom": "^4.3.1",
+        "react-select-plus": "^1.0.0-rc.3.patch10",
         "vazir-font": "^19.0.0"
     }
 }
