--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
+        "bootstrap-v4-rtl": "^4.1.1-0",
         "postcss-loader": "^3.0.0",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
